--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,23 +3,7 @@
 	padding: 0;
 }
 
-body {
-	background: -moz-radial-gradient(center, circle cover,  #ffffff 10%, #e5e5e5 100%); /* FF3.6+ */
-	background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(10%,#ffffff), color-stop(100%,#e5e5e5)); /* Chrome,Safari4+ */
-	background: -webkit-radial-gradient(center, circle cover,  #ffffff 10%,#e5e5e5 100%); /* Chrome10+,Safari5.1+ */
-	background: -o-radial-gradient(center, circle cover,  #ffffff 10%,#e5e5e5 100%); /* Opera 12+ */
-	background: -ms-radial-gradient(center, circle cover,  #ffffff 10%,#e5e5e5 100%); /* IE10+ */
-	background: radial-gradient(circle at center,  #ffffff 10%,#e5e5e5 100%); /* W3C */
-	cursor: default;
-	overflow: hidden;
-	color: #000;
-	font-size: 1.4em;
-	font-weight: 300;
-	font-family: 'Raleway', sans-serif;
-	text-shadow: 0px 0px 5px #333;
-}
-
-canvas {
+#container {
 	width: 100%;
 	height: 100%;
 }
